--- a/Bootstrap-1/index.html
+++ b/Bootstrap-1/index.html
@@ -755,8 +755,7 @@
 
                 <div class="row">
                     <div class="col-lg-8 col-12">
-                        Copyright ©2023 All rights reserved | Credits to this template given to <span class="bg-theme">
-                            Thapatechnical.com </span>
+                        Copyright ©2023 All rights reserved
                     </div>
                     <div class="col-md-4 col-12 ">
                         <div class="d-flex justify-content-center justify-content-lg-end gap-5 mt-lg-0 mt-3">
